# av1-top

./: .gitignore  ALL_IMPROVEMENTS_COMPLETE.md  BUILD_GO.sh  BUILD_ON_LINUX.md  CHANGELOG.md  CHECK_JOB_PATHS.sh  CHECK_ONEVPL.sh  CODE_REVIEW.md  COMPLETE.md  CROSS_COMPILE.md  Cargo.toml  DEBUG_JOBS.sh  DEPLOYMENT.md  FFMPEG_SETUP.md  FINAL_DEBUG.sh  FINAL_SUMMARY.md  FIX_DEB_BUILD.md  FIX_DRM_PERMISSIONS.sh  FIX_DRM_PERMISSIONS_CONTAINER.sh  FIX_INSTALL_PATH.md  FIX_SOURCES_AND_INSTALL.sh  FRESH_INSTALL_TRIXIE.sh  GO_IMPLEMENTATION_STATUS.md  GO_MIGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  INSTALL_DEB.md  INSTALL_GUIDE.md  INSTALL_NOW.md  INSTALL_RUST.md  MIGRATION_TO_GO.md  NO_MORE_FAKE_DATA.md  PACKAGE_COMPLETE.md  PHASE3_COMPLETE.md  PROGRESS.md  QUICK_CONFIG.md  QUICK_DEBUG.sh  QUICK_FFMPEG_INSTALL.md  QUICK_INSTALL.txt  QUICK_START_LINUX.md  (+26 more)
av1d/: Cargo.toml
av1d/src/: cli.rs  ffmpeg.rs  main.rs  shutdown.rs  transcode.rs
av1top/: Cargo.toml
av1top/src/: main.rs
cmd/av1d/: main.go
cmd/av1top/: main.go
core/: Cargo.toml
core/src/: config.rs  constants.rs  error.rs  executor.rs  ffmpeg_manager.rs  ffprobe.rs  heuristics.rs  job.rs  lib.rs  metadata.rs  persistence.rs  postprocess.rs  transcode.rs  utils.rs
internal/config/: config.go
internal/ffmpeg/: manager.go
internal/metadata/: metadata.go
internal/persistence/: job.go
internal/scanner/: scanner.go
internal/transcode/: transcode.go
pkg/tui/: model.go
