# AV1 Daemon + TUI Monitor Workspace
# This workspace contains three crates:
# - core: shared library with common types and logic
# - av1d: daemon that watches directories and transcodes media to AV1
# - av1top: btop-style TUI monitor for system metrics and transcode jobs

[workspace]
resolver = "2"
members = [
    "core",
    "av1d",
    "av1top",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AV1 Janitor"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# System info
sysinfo = "0.31"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Filesystem watching
notify = "6.1"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# System calls (for signal handling)
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# TOML parsing
toml = "0.8"

