[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation for job IDs
uuid = { workspace = true }

# TOML parsing
toml = { workspace = true }

# System calls (for Unix signals in executor)
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
chrono = { workspace = true }

